fixed issue with spacing lab9

--- a/lab9/css/lab.css
+++ b/lab9/css/lab.css
@@ -9,6 +9,7 @@ body {
   border: solid 2px #F34F1C;
   margin: 1px;
   padding: 15px;
+  overflow: hidden;
 }
 
 #header {
@@ -35,6 +36,7 @@ body {
   overflow: hidden;
   border: dotted 3px #F34F1C;
   padding: 5px;
+  padding-top: 15px;
   font-size: 85%;
   background-image: url("../img/lab9_newjersey.jpg");
   background-repeat: no-repeat;
@@ -42,8 +44,7 @@ body {
   background-attachment: fixed;
   background-size: cover;
   background-color: #01A6F0;
-  height: 100%;
-  /* don't use vh/vw for img backgrounds */
+  height: 125vh;
 }
 
 .review h2, p {
@@ -58,6 +59,7 @@ body {
   text-decoration: underline;
   width: 100px;
   padding: 5px;
+  margin-top: 40px;
 }
 h2#problems {
   color: #F34F1C;
